--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,44 @@
-{% include 'includes/_head.html' with title='Home' %}
-  <body>
-   
-{% include 'includes/_nav.html' %}
+{% extends "layout.html" %}
 
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">Resume App</div>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque incidunt voluptatum similique possimus expedita placeat, quisquam consequuntur iusto quaerat suscipit sapiente quo exercitationem magni consectetur, illo illum perferendis consequatur beatae! Quaerat iste id recusandae architecto repellendus aspernatur tempore nulla ratione perspiciatis nam. Officia, maiores, quos quidem nisi vel, quae repudiandae at sit autem facilis atque laudantium repellat? Labore temporibus corrupti nisi ducimus reprehenderit voluptatem sunt illo soluta, ratione eum qui natus architecto! Et voluptate eum natus accusamus inventore dolore facere officia voluptatibus, laudantium doloremque! Quis natus veritatis impedit porro eaque atque exercitationem? Repellat, nesciunt nisi. Sint adipisci possimus impedit sequi.</p>
-      <div class="card" style="width: 18rem;">
-        <img src="https://placehold.co/600x400" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
+{% block content %}
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+<div class="row">
+  <div class="col-md-12">
+  <h1>
+    Resume App
+  </h1>  
+  </div>
+</div>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque incidunt
+  voluptatum similique possimus expedita placeat, quisquam consequuntur iusto
+  quaerat suscipit sapiente quo exercitationem magni consectetur, illo illum
+  perferendis consequatur beatae! Quaerat iste id recusandae architecto
+  repellendus aspernatur tempore nulla ratione perspiciatis nam. Officia,
+  maiores, quos quidem nisi vel, quae repudiandae at sit autem facilis atque
+  laudantium repellat? Labore temporibus corrupti nisi ducimus reprehenderit
+  voluptatem sunt illo soluta, ratione eum qui natus architecto! Et voluptate
+  eum natus accusamus inventore dolore facere officia voluptatibus, laudantium
+  doloremque! Quis natus veritatis impedit porro eaque atque exercitationem?
+  Repellat, nesciunt nisi. Sint adipisci possimus impedit sequi.
+</p>
+<div class="card" style="width: 18rem">
+  <img src="https://placehold.co/600x400" class="card-img-top" alt="..." />
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">
+      Some quick example text to build on the card title and make up the bulk of
+      the card's content.
+    </p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+{% endblock %}
+
+{% block extra_scripts %}
+<script>
+  console.log("Hello World");
+</script>
+{% endblock %}
+
