--- a/templates/includes/_head.html
+++ b/templates/includes/_head.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -10,4 +11,5 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
         crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
