refactor: create layout structure

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,31 +1,23 @@
+{% extends 'includes/_base.html' %}
 {% load static %}
-<!doctype html>
-<html lang="en">
-    {% include 'includes/_head.html' %}
-    <body>
-        
-        <!--================Header Menu Area =================-->
-        {% include 'includes/_nav.html' %}
-        <!--================Header Menu Area =================-->
-        
-        <!--================Home Banner Area =================-->
+{% block banner_area %}
         <section class="banner_area">
             <div class="box_1620">
-				<div class="banner_inner d-flex align-items-center">
-					<div class="container">
-						<div class="banner_content text-center">
-							<h2>Contact Us</h2>
-							<div class="page_link">
-								<a href="index.html">Home</a>
-								<a href="contact.html">Contact Us</a>
-							</div>
-						</div>
-					</div>
-				</div>
+                <div class="banner_inner d-flex align-items-center">
+                    <div class="container">
+                        <div class="banner_content text-center">
+                            <h2>Contact Us</h2>
+                            <div class="page_link">
+                                <a href="index.html">Home</a>
+                                <a href="contact.html">Contact Us</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-        <!--================End Home Banner Area =================-->
-        
+{% endblock %}
+{% block content %}
         <!--================Contact Area =================-->
         <section class="contact_area p_120">
             <div class="container">
@@ -108,15 +100,11 @@
             </div>
         </div>
         <!--================End Contact Success and Error message Area =================-->
+{% endblock  %}
         
-        {% include 'includes/_footer.html' %}
-
+{% block extra_scripts %}
         <!-- contact js -->
         <script src="{% static 'js/jquery.form.js' %}"></script>
         <script src="{% static 'js/jquery.validate.min.js' %}"></script>
         <script src="{% static 'js/contact.js' %}"></script>
-        <!--gmaps Js-->
-        <script src="{% static 'js/gmaps.min.js' %}"></script>
-        
-    </body>
-</html>
+{% endblock %}
