--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,41 @@
+{% extends 'includes/_base.html' %}
 {% load static %}
-<!doctype html>
-{% include 'includes/_head.html' %}
-<html lang="en">
-    
-    <body>
-		<!--================Header Menu Area =================-->
-        {% include 'includes/_nav.html' %}
-        <!--================Header Menu Area =================-->
-		
-        <!--================Home Banner Area =================-->
-        <section class="home_banner_area">
-           	<div class="container box_1620">
-           		<div class="banner_inner d-flex align-items-center">
-					<div class="banner_content">
-						<div class="media">
-							<div class="d-flex">
-								<img src="{% get_media_prefix %}img/personal.jpg" alt="">
-							</div>
-							<div class="media-body">
-								<div class="personal_text">
-									<h6>Hello Everybody, i am</h6>
-									<h3>Donald McKinney</h3>
-									<h4>Junior UI/UX Developer</h4>
-									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
-									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
-									</ul>
-									<ul class="list personal_social">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									</ul>
-								</div>
+{% block banner_area %}
+	<section class="home_banner_area">
+		<div class="container box_1620">
+			<div class="banner_inner d-flex align-items-center">
+				<div class="banner_content">
+					<div class="media">
+						<div class="d-flex">
+							<img src="{% get_media_prefix %}img/personal.jpg" alt="">
+						</div>
+						<div class="media-body">
+							<div class="personal_text">
+								<h6>Hello Everybody, i am</h6>
+								<h3>Donald McKinney</h3>
+								<h4>Junior UI/UX Developer</h4>
+								<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
+								<ul class="list basic_info">
+									<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
+									<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
+									<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
+									<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
+								</ul>
+								<ul class="list personal_social">
+									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+								</ul>
 							</div>
 						</div>
-					</div>
+					</div>   
 				</div>
-            </div>
-        </section>
-        <!--================End Home Banner Area =================-->
-        
+			</div>
+		</div>
+	</section> 
+{% endblock %}
+
+{% block content %}
         <!--================Welcome Area =================-->
         <section class="welcome_area p_120">
         	<div class="container">
@@ -406,13 +399,6 @@
         	</div>
         </section>
         <!--================End Testimonials Area =================-->
+{% endblock  %}
+		
         
-        {% include 'includes/_footer.html' %}
-        
-        
-        
-        
-        
-        
-    </body>
-</html>
