--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,8 +8,8 @@
                         <div class="banner_content text-center">
                             <h2>Contact Us</h2>
                             <div class="page_link">
-                                <a href="index.html">Home</a>
-                                <a href="contact.html">Contact Us</a>
+                                <a href="{% url 'index' %}">Home</a>
+                                <a href="{% url 'contact' %}">Contact Us</a>
                             </div>
                         </div>
                     </div>
@@ -42,7 +42,8 @@
                         </div>
                     </div>
                     <div class="col-lg-9">
-                        <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                        <form class="row contact_form" action="{% url 'contact_form' %}" method="post" id="contactForm" novalidate="novalidate">
+                            {% csrf_token %}
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
